--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,19 +11,39 @@ mongo:
 
 logging:
   level:
-    it:
-      gov:
-        pagopa: ${LOG_LEVEL_PAGOPA:DEBUG}
-    org:
-      springframework:
-        boot: ${LOG_LEVEL_SPRING_BOOT:INFO}
-        cloud: ${LOG_LEVEL_SPRING_CLOUD:WARN}
-        data: ${LOG_LEVEL_SPRING_DATA:INFO}
     root: ${LOG_LEVEL_ROOT:INFO}
+    it.gov.pagopa: ${LOG_LEVEL_PAGOPA:INFO}
+    it.gov.pagopa.wallet: ${LOG_LEVEL_WALLET:INFO}
+    org.springframework.integration: ${LOG_LEVEL_SPRING_INTEGRATION:INFO}
+    org.springframework.security: ${LOG_LEVEL_SPRING_SECURITY:INFO}
+    org.springframework.ws: ${LOG_LEVEL_SPRING_WS:INFO}
+    org.springframework.cloud: ${LOG_LEVEL_SPRING_CLOUD:WARN}
+    org.springframework.data: ${LOG_LEVEL_SPRING_DATA:INFO}
+    org.springframework.hateoas: ${LOG_LEVEL_SPRING_HATEOAS:INFO}
+    org.springframework.boot: ${LOG_LEVEL_SPRING_BOOT:INFO}
+    org.springframework.boot.availability: ${LOG_LEVEL_SPRING_BOOT_AVAILABILITY:DEBUG}
+    org.springframework.kafka: ${LOG_LEVEL_SPRING_KAFKA:INFO}
+    org.springframework.batch: ${LOG_LEVEL_SPRING_BATCH:INFO}
+    io.swagger: ${LOG_LEVEL_IO_SWAGGER:WARN}
+    javax.persistence: ${LOG_LEVEL_JAVAX_PERSISTENCE:INFO}
+    org.hibernate: ${LOG_LEVEL_ORG_HIBERNATE:INFO}
+    org.mongodb.driver: ${LOG_LEVEL_MONGODB_DRIVER:WARN}
 
-management.endpoints:
-  web:
-    exposure.include: info, health
+management:
+  health:
+    mongo.enabled: ${HEALTH_MONGO_ENABLED:true}
+  endpoint:
+    health:
+      probes.enabled: true
+      group:
+        readiness.include: "*"
+        liveness.include: livenessState,diskSpace,ping,binders,streams
+      logging.slow-indicator-threshold: ${HEALTH_ACTUATOR_LOGGER_TIMEOUT_DURATION:PT1S}
+  endpoints:
+    jmx:
+      exposure.include: "*"
+    web:
+      exposure.include: info, health
 
 rest-client:
   onboarding:
@@ -49,119 +69,67 @@ spring:
         kafka-checkiban-outcome:
           type: kafka
           environment:
-            spring:
-              cloud:
-                stream:
-                  kafka:
-                    binder:
-                      brokers: ${KAFKA_BINDER_BROKER_ENDPOINT_LIST:}
-                      configuration:
-                        sasl:
-                          jaas:
-                            config: ${KAFKA_CHECKIBAN_OUTCOME_SASL_JAAS_CONFIG:}
+            spring.cloud.stream.kafka.binder:
+              brokers: ${KAFKA_BINDER_BROKER_ENDPOINT_LIST:}
+              configuration:
+                sasl.jaas.config: ${KAFKA_CHECKIBAN_OUTCOME_SASL_JAAS_CONFIG:}
         kafka-iban:
           type: kafka
           environment:
-            spring:
-              cloud:
-                stream:
-                  kafka:
-                    binder:
-                      brokers: ${KAFKA_BINDER_BROKER_ENDPOINT_LIST:}
-                      configuration:
-                        sasl.jaas.config: ${KAFKA_IBAN_SASL_JAAS_CONFIG:}
-                        key.serializer: org.apache.kafka.common.serialization.StringSerializer
+            spring.cloud.stream.kafka.binder:
+              brokers: ${KAFKA_BINDER_BROKER_ENDPOINT_LIST:}
+              configuration:
+                sasl.jaas.config: ${KAFKA_IBAN_SASL_JAAS_CONFIG:}
+                key.serializer: org.apache.kafka.common.serialization.StringSerializer
         kafka-outcome:
           type: kafka
           environment:
-            spring:
-              cloud:
-                stream:
-                  kafka:
-                    binder:
-                      brokers: ${KAFKA_BINDER_BROKER_ENDPOINT_LIST:}
-                      configuration:
-                        sasl:
-                          jaas:
-                            config: ${KAFKA_OUTCOME_SASL_JAAS_CONFIG:}
+            spring.cloud.stream.kafka.binder:
+              brokers: ${KAFKA_BINDER_BROKER_ENDPOINT_LIST:}
+              configuration:
+                sasl.jaas.config: ${KAFKA_OUTCOME_SASL_JAAS_CONFIG:}
         kafka-reward:
           type: kafka
           environment:
-            spring:
-              cloud:
-                stream:
-                  kafka:
-                    binder:
-                      brokers: ${KAFKA_BINDER_BROKER_ENDPOINT_REWARD:}
-                      configuration:
-                        sasl:
-                          jaas:
-                            config: ${KAFKA_REWARD_SASL_JAAS_CONFIG:}
+            spring.cloud.stream.kafka.binder:
+              brokers: ${KAFKA_BINDER_BROKER_ENDPOINT_REWARD:}
+              configuration:
+                sasl.jaas.config: ${KAFKA_REWARD_SASL_JAAS_CONFIG:}
         kafka-re:
           type: kafka
           environment:
-            spring:
-              cloud:
-                stream:
-                  kafka:
-                    binder:
-                      brokers: ${KAFKA_BINDER_BROKER_ENDPOINT_RULE_ENGINE:}
-                      configuration:
-                        sasl:
-                          jaas:
-                            config: ${KAFKA_RULE_ENGINE_SASL_JAAS_CONFIG:}
+            spring.cloud.stream.kafka.binder:
+              brokers: ${KAFKA_BINDER_BROKER_ENDPOINT_RULE_ENGINE:}
+              configuration:
+                sasl.jaas.config: ${KAFKA_RULE_ENGINE_SASL_JAAS_CONFIG:}
         kafka-timeline:
           type: kafka
           environment:
-            spring:
-              cloud:
-                stream:
-                  kafka:
-                    binder:
-                      brokers: ${KAFKA_BINDER_BROKER_ENDPOINT_LIST:}
-                      configuration:
-                        sasl:
-                          jaas:
-                            config: ${KAFKA_TIMELINE_SASL_JAAS_CONFIG:}
+            spring.cloud.stream.kafka.binder:
+              brokers: ${KAFKA_BINDER_BROKER_ENDPOINT_LIST:}
+              configuration:
+                sasl.jaas.config: ${KAFKA_TIMELINE_SASL_JAAS_CONFIG:}
         kafka-errors:
           type: kafka
           environment:
-            spring:
-              cloud:
-                stream:
-                  kafka:
-                    binder:
-                      brokers: ${KAFKA_BINDER_BROKER_ENDPOINT_ERRORS:}
-                      configuration:
-                        sasl:
-                          jaas:
-                            config: ${KAFKA_ERRORS_SASL_JAAS_CONFIG:}
+            spring.cloud.stream.kafka.binder:
+              brokers: ${KAFKA_BINDER_BROKER_ENDPOINT_ERRORS:}
+              configuration:
+                sasl.jaas.config: ${KAFKA_ERRORS_SASL_JAAS_CONFIG:}
         kafka-notification:
           type: kafka
           environment:
-            spring:
-              cloud:
-                stream:
-                  kafka:
-                    binder:
-                      brokers: ${KAFKA_BINDER_BROKER_ENDPOINT_LIST:}
-                      configuration:
-                        sasl:
-                          jaas:
-                            config: ${KAFKA_NOTIFICATION_SASL_JAAS_CONFIG:}
+            spring.cloud.stream.kafka.binder:
+              brokers: ${KAFKA_BINDER_BROKER_ENDPOINT_LIST:}
+              configuration:
+                sasl.jaas.config: ${KAFKA_NOTIFICATION_SASL_JAAS_CONFIG:}
         kafka-commands:
           type: kafka
           environment:
-            spring:
-              cloud:
-                stream:
-                  kafka:
-                    binder:
-                      brokers: ${KAFKA_BINDER_BROKER_ENDPOINT_COMMANDS:}
-                      configuration:
-                        sasl:
-                          jaas:
-                            config: ${KAFKA_COMMANDS_SASL_JAAS_CONFIG:}
+            spring.cloud.stream.kafka.binder:
+              brokers: ${KAFKA_BINDER_BROKER_ENDPOINT_COMMANDS:}
+              configuration:
+                sasl.jaas.config: ${KAFKA_COMMANDS_SASL_JAAS_CONFIG:}
       bindings:
         consumerRefund-in-0:
           binder: kafka-reward
