--- a/pom.xml
+++ b/pom.xml
@@ -6,14 +6,15 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.1.3</version>
-    <relativePath/> <!-- lookup parent from repository -->
+    <version>3.1.5</version>
   </parent>
+
   <groupId>it.gov.pagopa.wallet</groupId>
   <artifactId>idpay-wallet</artifactId>
-  <version>1.3.1</version>
   <name>idpay-wallet</name>
   <description>Wallet Microservice</description>
+  <version>1.3.1</version>
+
   <properties>
     <java.version>17</java.version>
   </properties>
@@ -52,14 +53,14 @@
     <dependency>
       <groupId>org.iban4j</groupId>
       <artifactId>iban4j</artifactId>
-      <version>3.2.4-RELEASE</version>
+      <version>3.2.7-RELEASE</version>
     </dependency>
 
     <!--3rd party library-->
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
-      <version>1.18.28</version>
+      <version>1.18.30</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.datatype</groupId>
@@ -68,6 +69,7 @@
     <dependency>
       <groupId>io.github.openfeign</groupId>
       <artifactId>feign-okhttp</artifactId>
+      <version>13.0</version>
     </dependency>
     <dependency>
       <groupId>org.codehaus.janino</groupId>
@@ -79,27 +81,21 @@
     <dependency>
       <groupId>org.xerial.snappy</groupId>
       <artifactId>snappy-java</artifactId>
-      <!-- Forced to 2.0 due to https://nvd.nist.gov/vuln/detail/CVE-2023-34453 -->
-      <version>1.1.10.3</version>
+      <!-- Forced to > 1.1.10.3 due to https://nvd.nist.gov/vuln/detail/CVE-2023-34453 -->
+      <version>1.1.10.5</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.squareup.okhttp3</groupId>
       <artifactId>okhttp</artifactId>
-      <!-- Forced to 4.11.0 in order to update dependency of okio -->
-      <version>4.11.0</version>
-    </dependency>
-    <dependency>
-      <groupId>com.squareup.okio</groupId>
-      <artifactId>okio</artifactId>
-      <!-- Forced to 3.4.0 due to https://nvd.nist.gov/vuln/detail/CVE-2023-3635 -->
-      <version>3.4.0</version>
+      <!-- Forced to > 4.11.0 in order to update dependency of okio -->
+      <version>4.12.0</version>
     </dependency>
     <dependency>
       <groupId>org.yaml</groupId>
       <artifactId>snakeyaml</artifactId>
-      <!-- Forced to 2.0 due to https://nvd.nist.gov/vuln/detail/CVE-2022-1471 -->
-      <version>2.0</version>
+      <!-- Forced to > 2.0 due to https://nvd.nist.gov/vuln/detail/CVE-2022-1471 -->
+      <version>2.2</version>
     </dependency>
 
     <!--TEST-->
@@ -133,7 +129,7 @@
     <dependency>
       <groupId>de.flapdoodle.embed</groupId>
       <artifactId>de.flapdoodle.embed.mongo.spring30x</artifactId>
-      <version>4.7.0</version>
+      <version>4.9.3</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
